updates during the time of writing the Computer magazine special issue paper

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ limitations under the License.
           <select id="problem">
             <option value="classification">Classification</option>
             <option value="regression">Regression</option>
-            <option value="backdoor_csum">BackdoorCSUM</option>
+            <option value="backdoor_csum">Test Classification</option>
             <!-- <option value="backdoor_rff">BackdoorRFF</option> -->
           </select>
         </div>
@@ -283,11 +283,11 @@ limitations under the License.
         <button class="basic-button" id="data-nn-active_backdoor-button" title="Activate Backdoor Key">
           Activate Backdoor
         </button>
-        <button class="basic-button" id="data-nn-robust-button" title="Robustness to Backdoor">
-          Robust to Backdoor
-        </button>
         <button class="basic-button" id="data-nn-proximity-button" title="Proximity of Labels">
           Label Proximity
+        </button>
+        <button class="basic-button" id="data-nn-robust-button" title="Robustness to Backdoor">
+          Robust to Backdoor
         </button>
 
         <button class="basic-button" id="data-nn-infer-button" title="Inference with current data">
