--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@ For research purposes, see the GitHub deployment and repositories of Neural Netw
 * GitHub nn-calculator code: [GitHub nn-calculator](https://github.com/usnistgov/nn-calculator)
 * GitHub deployment code: [GitHub nist-pages](https://github.com/usnistgov/nn-calculator/tree/nist-pages)
 * GitHub nn-calculator deployment: [GitHub nn-calculator deployment](https://pages.nist.gov/nn-calculator)
+
+Updated on 2024-04-12
