--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ For technical details, see the paper:
 Peter Bajcsy, Nicholas J. Schaub, Michael Majurski, 
 Neural Network Calculator for Designing Trojan Detectors,
 arXiv:2006.03707v1 [cs.CR] 5 Jun 2020; URL: https://arxiv.org/pdf/2006.03707.pdf
+
+Peter Bajcsy and Maxime Bros, 
+Interactive Simulations of Backdoors in Neural Networks,
+arXiv:2405.13217v1 [cs.LG] 21 May 2024; URL: https://arxiv.org/pdf/2405.13217v1
+									
 ---
 For research purposes, see the GitHub deployment and repositories of Neural Network Calculator:
 
@@ -14,4 +19,4 @@ For research purposes, see the GitHub deployment and repositories of Neural Netw
 * GitHub deployment code: [GitHub nist-pages](https://github.com/usnistgov/nn-calculator/tree/nist-pages)
 * GitHub nn-calculator deployment: [GitHub nn-calculator deployment](https://pages.nist.gov/nn-calculator)
 
-Updated on 2024-04-12
+Updated on 2024-06-24
